hosts/pierun/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
### RULES ###

### tuple ### allow any 53 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 53 -j ACCEPT
-A ufw-user-output -p udp --dport 53 -j ACCEPT

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 80 -j ACCEPT

### tuple ### allow tcp 443 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 443 -j ACCEPT

### tuple ### allow udp 123 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p udp --dport 123 -j ACCEPT

### tuple ### allow any 22 0.0.0.0/0 any 192.168.178.0/24 in
-A ufw-user-input -p tcp --dport 22 -s 192.168.178.0/24 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -s 192.168.178.0/24 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 10.42.0.0/16 in
-A ufw-user-input -s 10.42.0.0/16 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 10.43.0.0/16 in
-A ufw-user-input -s 10.43.0.0/16 -j ACCEPT

### tuple ### allow any any 10.42.0.0/16 any 0.0.0.0/0 in
-A ufw-user-input -d 10.42.0.0/16 -j ACCEPT

### tuple ### allow any any 10.43.0.0/16 any 0.0.0.0/0 in
-A ufw-user-input -d 10.43.0.0/16 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###
COMMIT
